--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,28 @@
             android:layout_gravity="center"
             android:hint="Ingresar"
             android:theme="@style/BotonColores"/>
+
+        <RadioButton
+            android:id="@+id/rbSesion"
+            android:hint="Nocerrár sesión"
+            android:textColorHint="@color/colorWhite"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/btnRegistrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@android:color/transparent"
+            android:hint="Registrar"
+            android:textColorHint="@color/colorWhite"
+            tools:layout_editor_absoluteX="605dp"
+            tools:layout_editor_absoluteY="67dp" />
     </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
