--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#22490b</color>
     <color name="colorDarkBlue">#041f45</color>
-    <color name="colorWhite">#f5f4f4</color>
+    <color name="colorWhite">#fbf9f9</color>
     <color name="colorBlack">#000000</color>
 </resources>
