--- a/app/src/main/res/layout/activity_card_view_buscar_usuarios.xml
+++ b/app/src/main/res/layout/activity_card_view_buscar_usuarios.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:context="com.example.mauricio.real.CardView_Solicitudes">
     <android.support.v7.widget.CardView
-        android:id="@+id/cvAmigos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:contentPadding="10sp">
+        android:layout_height="wrap_content">
         <LinearLayout
-            android:layout_width="345dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imgUserPerfil"
-                android:layout_width="48sp"
-                android:layout_height="48sp"
-                android:src="@drawable/ic_account_circle"/>
+                android:id="@+id/imgUserEnvioSolicitud"
+                android:layout_width="64dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_account_circle"
+                android:layout_gravity="center"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -25,7 +26,7 @@
                 android:orientation="vertical"
                 android:gravity="center">
                 <TextView
-                    android:id="@+id/tvNombreAmigo"
+                    android:id="@+id/tvNombreSolicitudUsuario"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -38,33 +39,24 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:id="@+id/tvMensajeAmigo"
-                        android:paddingLeft="15sp"
+                        android:id="@+id/tvEstadoSolicitud"
                         android:paddingRight="15sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Mensaje"
+                        android:text="No son amigos"
                         android:textSize="20sp"
                         android:textColor="#000000"
-                        android:maxLines="1"
-                        android:ellipsize="end" />
-                    <TextView
-                        android:id="@+id/tvHoraAmigo"
-                        android:paddingRight="15sp"
+                        android:layout_weight="1"/>
+                    <Button
+                        android:id="@+id/btnEnviarSolicitud"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Hora"
-                        android:textSize="20sp"
-                        android:textColor="#000000" />
+                        android:gravity="center"
+                        android:hint="Aceptar"
+                        android:textColorHint="@color/colorBlack"
+                        android:background="@android:color/transparent"/>
                 </LinearLayout>
             </LinearLayout>
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:paddingRight="15sp"
-                android:id="@+id/imgDominio"
-                android:layout_width="48sp"
-                android:layout_height="48sp"
-                android:src="@drawable/ic_theaters"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
