--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mauricio.real.activity_registro"
+    tools:context="com.example.mauricio.real.Activity_registro"
     android:background="@color/colorDarkBlue"
     android:padding="10sp">
 
