--- a/app/src/main/res/layout/fragment_lista_amigos.xml
+++ b/app/src/main/res/layout/fragment_lista_amigos.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mauricio.real.ListaAmigos">
+    tools:context=".actividadDeUsuarios.amigos.Fragment_ListaAmigos">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvAmigos"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/activity_card_view_mensaje">
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/activity_card_view_amigos"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
     </android.support.v7.widget.RecyclerView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
